tests/baselines/reference/downlevelLetConst19.errors.txt
tests/cases/compiler/downlevelLetConst19.ts(9,14): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'.


==== tests/cases/compiler/downlevelLetConst19.ts (1 errors) ====
    'use strict'
    declare function use(a: any);
    var x;
    function a() {
      {
        let x;
        use(x);
    
        function b() {
                 ~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES3' or 'ES5'.
            {
                let x;
                use(x);
            }
            use(x);
        }
      }
      use(x)
    }
    use(x)